--- a/FormValid.html
+++ b/FormValid.html
@@ -14,7 +14,7 @@
             let hobby = document.getElementsByName("hobby");// hobby[0] hobby[1] hobby[2]
             let hobbySum = "";
 
-            document.getElementById("firstNamePrint").innerHTML = "<b>First Name : </b>" + fn;
+            document.getElementById("firstNamePrint").innerHTML = "<b>First Name : " + fn + "</b>";
             document.getElementById("lastNamePrint").innerHTML = "<b>Last Name : </b>" + ln;
 
             if (gender[0].checked) {
