--- a/VoteValidation.html
+++ b/VoteValidation.html
@@ -1,44 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        function voteEligiblity(){
+        function voteEligiblity() {
             //input 
             let firstName = document.getElementById("firstName").value;
-            let age = document.getElementById("age").value; 
+            let age = document.getElementById("age").value;
             let gender = document.getElementsByName("gender"); // gender[] 
-            //process 
-                 if( firstName == "" ){
-                    document.getElementById("firstNameMsg").innerHTML = "Please Enter First Name";
-                 }
-                 if(age == ""){
-                    document.getElementById("ageMsg").innerHTML = "Please Enter Age";
-                 }
 
-                 if(!gender[0].checked && !gender[1].checked){
-                    document.getElementById("genderMsg").innerHTML = "Please Select Gender";
-                 }
+            let isError = false; 
+
+            //process 
+            if (firstName == "") {
+                isError = true;
+                document.getElementById("firstNameMsg").innerHTML = "Please Enter First Name";
+            } else {
+                document.getElementById("firstNameMsg").innerHTML = "";
+            }
+            if (age == "") {
+                isError = true;
+                document.getElementById("ageMsg").innerHTML = "Please Enter Age";
+            } else {
+                document.getElementById("ageMsg").innerHTML = "";
+            }
+
+            if (!gender[0].checked && !gender[1].checked) {
+                isError = true; 
+                document.getElementById("genderMsg").innerHTML = "Please Select Gender";
+            } else {
+                document.getElementById("genderMsg").innerHTML = "";
+
+            }
 
             //output
-                 
+            if(isError == false){ 
+                if (gender[0].checked && age >= 18) {
+                    document.getElementById("result").innerHTML = "<h2>eligible for voting</h2>";
+                } else if (gender[1].checked && age >= 19) {
+                    document.getElementById("result").innerHTML = "<h2>eligible for voting</h2>";
+                } else {
+                    document.getElementById("result").innerHTML = "<h2>NOT eligible for voting</h2>";
+                }
+            }
+
 
         }
     </script>
 </head>
-<body>
-    FirstName : <input type="text" id="firstName"/>
-    <span id="firstNameMsg" style="color: red;"></span>
-    <br><br> 
-    Age :  <input type="text" id="age"/>
-    <span id="ageMsg" style="color: red;"></span>
-    <br><bR> 
-    Gender :  Male <input type="radio" name="gender" value="male"/>  Female <input type="radio" name="gender" value="female"/>
-    <span id="genderMsg" style="color: red;"></span>
-    <br><br>  
 
-    <input type="button" value="Submit" onclick="voteEligiblity()"/>
+<body>
+    FirstName : <input type="text" id="firstName" />
+    <span id="firstNameMsg" style="color: red;"></span>
+    <br><br>
+    Age : <input type="text" id="age" />
+    <span id="ageMsg" style="color: red;"></span>
+    <br><bR>
+    Gender : Male <input type="radio" name="gender" value="male" /> Female <input type="radio" name="gender"
+        value="female" />
+    <span id="genderMsg" style="color: red;"></span>
+    <br><br>
+
+    <input type="button" value="Submit" onclick="voteEligiblity()" />
+    <br><br>
+    <div id="result"></div>
 </body>
+
 </html>
